@@ -6,4 +6,5 @@ MANIFEST			This list of files
 README
 t/pod-coverage.t
 t/pod.t
+t/send.t
 t/simple.t
